다국어 처리 구현 자동차 이름 추가 손님 대사 추가

--- a/taxi-game-3d-client/Assets/_TaxiGame/Localization/Tables/Game String Table.csv
+++ b/taxi-game-3d-client/Assets/_TaxiGame/Localization/Tables/Game String Table.csv
@@ -14,5 +14,173 @@ guide/2,,,2. RELEASE TO STOP,2. 화면에 손을 때 멈춤
 car-list/select,,,Select,선택
 car-list/cancel,,,Cancel,취소
 roulette/spin,,,Spin,회전
-rw-msg/car,,차동차 획득 메시지,Gain {0}.,{0}을(를) 획득하였습니다.
+rw-msg/car,,차동차 획득 메시지(최초획득),Gain {0}.,{0}을(를) 획득하였습니다.
+rw-msg/car-cost,,차동차 획득 메시지(코인 대신 획득),"{0} is already exit.
+Gain {1} coins.","{0} 는 이미 가지고 있습니다.
+{1} 코인을 획득하였습니다."
 rw-msg/coin,,코인 획득 메시지,Gain {0} coins.,{0} 코인을 획득하였습니다.
+car/vz01_black,,,VZ01(Black),VZ01(검정)
+car/vz01_blue,,,VZ01(Blue),VZ01(파랑)
+car/vz01_gray,,,VZ01(Gray),VZ01(회색)
+car/vz01_green,,,VZ01(Green),VZ01(녹색)
+car/vz01_lightblue,,,VZ01(Light Blue),VZ01(하늘색)
+car/vz01_purple,,,VZ01(Purple),VZ01(보라색)
+car/vz01_red,,,VZ01(Red),VZ01(빨강)
+car/vz01_sand,,,VZ01(Sand),VZ01(샌드)
+car/vz01_white,,,VZ01(White),VZ01(흰색)
+car/vz01_yellow,,,VZ01(Yellow),VZ01(노랑)
+car/vz02_black,,,VZ02(Black),VZ02(검정)
+car/vz02_blue,,,VZ02(Blue),VZ02(파랑)
+car/vz02_gray,,,VZ02(Gray),VZ02(회색)
+car/vz02_green,,,VZ02(Green),VZ02(녹색)
+car/vz02_lightblue,,,VZ02(Light Blue),VZ02(하늘색)
+car/vz02_purple,,,VZ02(Purple),VZ02(보라색)
+car/vz02_red,,,VZ02(Red),VZ02(빨강)
+car/vz02_sand,,,VZ02(Sand),VZ02(샌드)
+car/vz02_white,,,VZ02(White),VZ02(흰색)
+car/vz02_yellow,,,VZ02(Yellow),VZ02(노랑)
+car/vz03_black,,,VZ03(Black),VZ03(검정)
+car/vz03_blue,,,VZ03(Blue),VZ03(파랑)
+car/vz03_gray,,,VZ03(Gray),VZ03(회색)
+car/vz03_green,,,VZ03(Green),VZ03(녹색)
+car/vz03_lightblue,,,VZ03(Light Blue),VZ03(하늘색)
+car/vz03_purple,,,VZ03(Purple),VZ03(보라색)
+car/vz03_red,,,VZ03(Red),VZ03(빨강)
+car/vz03_sand,,,VZ03(Sand),VZ03(샌드)
+car/vz03_white,,,VZ03(White),VZ03(흰색)
+car/vz03_yellow,,,VZ03(Yellow),VZ03(노랑)
+car/vz04_black,,,VZ04(Black),VZ04(검정)
+car/vz04_blue,,,VZ04(Blue),VZ04(파랑)
+car/vz04_gray,,,VZ04(Gray),VZ04(회색)
+car/vz04_green,,,VZ04(Green),VZ04(녹색)
+car/vz04_lightblue,,,VZ04(Light Blue),VZ04(하늘색)
+car/vz04_purple,,,VZ04(Purple),VZ04(보라색)
+car/vz04_red,,,VZ04(Red),VZ04(빨강)
+car/vz04_sand,,,VZ04(Sand),VZ04(샌드)
+car/vz04_white,,,VZ04(White),VZ04(흰색)
+car/vz04_yellow,,,VZ04(Yellow),VZ04(노랑)
+car/vz05_black,,,VZ05(Black),VZ05(검정)
+car/vz05_blue,,,VZ05(Blue),VZ05(파랑)
+car/vz05_gray,,,VZ05(Gray),VZ05(회색)
+car/vz05_green,,,VZ05(Green),VZ05(녹색)
+car/vz05_lightblue,,,VZ05(Light Blue),VZ05(하늘색)
+car/vz05_purple,,,VZ05(Purple),VZ05(보라색)
+car/vz05_red,,,VZ05(Red),VZ05(빨강)
+car/vz05_sand,,,VZ05(Sand),VZ05(샌드)
+car/vz05_white,,,VZ05(White),VZ05(흰색)
+car/vz05_yellow,,,VZ05(Yellow),VZ05(노랑)
+car/vz05r_black,,,VZ05R(Black),VZ05R(검정)
+car/vz05r_blue,,,VZ05R(Blue),VZ05R(파랑)
+car/vz05r_gray,,,VZ05R(Gray),VZ05R(회색)
+car/vz05r_green,,,VZ05R(Green),VZ05R(녹색)
+car/vz05r_lightblue,,,VZ05R(Light Blue),VZ05R(하늘색)
+car/vz05r_purple,,,VZ05R(Purple),VZ05R(보라색)
+car/vz05r_red,,,VZ05R(Red),VZ05R(빨강)
+car/vz05r_sand,,,VZ05R(Sand),VZ05R(샌드)
+car/vz05r_white,,,VZ05R(White),VZ05R(흰색)
+car/vz05r_yellow,,,VZ05R(Yellow),VZ05R(노랑)
+car/vz06_black,,,VZ06(Black),VZ06(검정)
+car/vz06_blue,,,VZ06(Blue),VZ06(파랑)
+car/vz06_gray,,,VZ06(Gray),VZ06(회색)
+car/vz06_green,,,VZ06(Green),VZ06(녹색)
+car/vz06_lightblue,,,VZ06(Light Blue),VZ06(하늘색)
+car/vz06_purple,,,VZ06(Purple),VZ06(보라색)
+car/vz06_red,,,VZ06(Red),VZ06(빨강)
+car/vz06_sand,,,VZ06(Sand),VZ06(샌드)
+car/vz06_white,,,VZ06(White),VZ06(흰색)
+car/vz06_yellow,,,VZ06(Yellow),VZ06(노랑)
+car/vz07_black,,,VZ07(Black),VZ07(검정)
+car/vz07_blue,,,VZ07(Blue),VZ07(파랑)
+car/vz07_gray,,,VZ07(Gray),VZ07(회색)
+car/vz07_green,,,VZ07(Green),VZ07(녹색)
+car/vz07_lightblue,,,VZ07(Light Blue),VZ07(하늘색)
+car/vz07_purple,,,VZ07(Purple),VZ07(보라색)
+car/vz07_red,,,VZ07(Red),VZ07(빨강)
+car/vz07_sand,,,VZ07(Sand),VZ07(샌드)
+car/vz07_white,,,VZ07(White),VZ07(흰색)
+car/vz07_yellow,,,VZ07(Yellow),VZ07(노랑)
+car/vz08_black,,,VZ08(Black),VZ08(검정)
+car/vz08_blue,,,VZ08(Blue),VZ08(파랑)
+car/vz08_gray,,,VZ08(Gray),VZ08(회색)
+car/vz08_green,,,VZ08(Green),VZ08(녹색)
+car/vz08_lightblue,,,VZ08(Light Blue),VZ08(하늘색)
+car/vz08_purple,,,VZ08(Purple),VZ08(보라색)
+car/vz08_red,,,VZ08(Red),VZ08(빨강)
+car/vz08_sand,,,VZ08(Sand),VZ08(샌드)
+car/vz08_white,,,VZ08(White),VZ08(흰색)
+car/vz08_yellow,,,VZ08(Yellow),VZ08(노랑)
+car/vz09_black,,,VZ09(Black),VZ09(검정)
+car/vz09_blue,,,VZ09(Blue),VZ09(파랑)
+car/vz09_gray,,,VZ09(Gray),VZ09(회색)
+car/vz09_green,,,VZ09(Green),VZ09(녹색)
+car/vz09_lightblue,,,VZ09(Light Blue),VZ09(하늘색)
+car/vz09_purple,,,VZ09(Purple),VZ09(보라색)
+car/vz09_red,,,VZ09(Red),VZ09(빨강)
+car/vz09_sand,,,VZ09(Sand),VZ09(샌드)
+car/vz09_white,,,VZ09(White),VZ09(흰색)
+car/vz09_yellow,,,VZ09(Yellow),VZ09(노랑)
+car/vz21_black,,,VZ21(Black),VZ21(검정)
+car/vz21_blue,,,VZ21(Blue),VZ21(파랑)
+car/vz21_gray,,,VZ21(Gray),VZ21(회색)
+car/vz21_green,,,VZ21(Green),VZ21(녹색)
+car/vz21_lightblue,,,VZ21(Light Blue),VZ21()
+car/vz21_purple,,,VZ21(Purple),VZ21(보라색)
+car/vz21_red,,,VZ21(Red),VZ21(빨강)
+car/vz21_sand,,,VZ21(Sand),VZ21(샌드)
+car/vz21_white,,,VZ21(White),VZ21(흰색)
+car/vz21_yellow,,,VZ21(Yellow),VZ21(노랑)
+car/vz31_black,,,VZ31(Black),VZ31(검정)
+car/vz31_blue,,,VZ31(Blue),VZ31(파랑)
+car/vz31_gray,,,VZ31(Gray),VZ31(회색)
+car/vz31_green,,,VZ31(Green),VZ31(녹색)
+car/vz31_lightblue,,,VZ31(Light Blue),VZ31(하늘색)
+car/vz31_purple,,,VZ31(Purple),VZ31(보라색)
+car/vz31_red,,,VZ31(Red),VZ31(빨강)
+car/vz31_sand,,,VZ31(Sand),VZ31(샌드)
+car/vz31_white,,,VZ31(White),VZ31(흰색)
+car/vz31_yellow,,,VZ31(Yellow),VZ31(노랑)
+car/vz099_black,,,VZ99(Black),VZ99(검정)
+car/vz099_blue,,,VZ99(Blue),VZ99(파랑)
+car/vz099_gray,,,VZ99(Gray),VZ99(회색)
+car/vz099_green,,,VZ99(Green),VZ99(녹색)
+car/vz099_lightblue,,,VZ99(Light Blue),VZ99(하늘색)
+car/vz099_purple,,,VZ99(Purple),VZ99(보라색)
+car/vz099_red,,,VZ99(Red),VZ99(빨강)
+car/vz099_sand,,,VZ99(Sand),VZ99(샌드)
+car/vz099_white,,,VZ99(White),VZ99(흰색)
+car/vz099_yellow,,,VZ99(Yellow),VZ99(노랑)
+car/gz21_black,,,GZ21(Black),GZ21(검정)
+car/gz21_blue,,,GZ21(Blue),GZ21(파랑)
+car/gz21_gray,,,GZ21(Gray),GZ21(회색)
+car/gz21_green,,,GZ21(Green),GZ21(녹색)
+car/gz21_lightblue,,,GZ21(Light Blue),GZ21(하늘색)
+car/gz21_purple,,,GZ21(Purple),GZ21(보라색)
+car/gz21_red,,,GZ21(Red),GZ21(빨강)
+car/gz21_sand,,,GZ21(Sand),GZ21(샌드)
+car/gz21_white,,,GZ21(White),GZ21(흰색)
+car/gz21_yellow,,,GZ21(Yellow),GZ21(노랑)
+car/gz24_black,,,GZ24(Black),GZ24(검정)
+car/gz24_blue,,,GZ24(Blue),GZ24(파랑)
+car/gz24_gray,,,GZ24(Gray),GZ24(회색)
+car/gz24_green,,,GZ24(Green),GZ24(녹색)
+car/gz24_lightblue,,,GZ24(Light Blue),GZ24(하늘색)
+car/gz24_purple,,,GZ24(Purple),GZ24(보라색)
+car/gz24_red,,,GZ24(Red),GZ24(빨강)
+car/gz24_sand,,,GZ24(Sand),GZ24(샌드)
+car/gz24_white,,,GZ24(White),GZ24(흰색)
+car/gz24_yellow,,,GZ24(Yellow),GZ24(노랑)
+talk/1-1,,,Go to the place where you spend the most.,
+talk/1-2,,,Go to the nearby Hilton hotel.,근처 힐튼 호텔로 가주세요.
+talk/1-3,,,"Bro hurry up, I'm in a hurry.",서둘러 주세요. 급해요.
+talk/1-4,,,"Master, are you an old driver?","기사님, 운전 얼마나 하셨어요?"
+talk/1-5,,,"Master, how much do you earn per day?","기사님, 하루에 얼마나 벌어요?"
+talk/1-6,,,"Master, keep up with that Ferrari.","기사님, 저 페라리 좀 따라가 주세요."
+talk/1-7,,,Take me to the nearest bank.,가까운 은행으로 가주세요.
+talk/1-8,,,Help me keep up with the car in front!,앞차 따라가 주세요.
+talk/1-9,,,"Go to the railway station, I'll catch the bus!",기차역으로 가주세요.
+talk/2-1,,,I'll wait for you at the gate of the hotel lobby.,호텔 로비 입구에서 기다릴께요.
+talk/2-2,,,"It's going to rain, you come quickly!","비가 올 것 같아요, 빨리 와주세요!"
+talk/2-3,,,"Master, hurry up, I have to catch the plane.","기사님, 빨리요, 비행기 타야 돼요!"
+talk/2-4,,,"Master, can you be there in 5 minutes?","기사님, 5분 안에 오실 수 있나요?"
+talk/2-5,,,"Hello, please meet me across the street.","안녕하세요, 길 건너편으로 와주세요."
+talk/2-6,,,"Stop the car, please! Stop the car, please!",여기요! 여기요!
