빌드 후 발견된 버그들 수정 InputSystem에 화면터치 처리 추가 Localization 적용 안 되는 텍스트 수정 스타트라인, 앤드라인 텍스쳐에서 Mipmap 해제

--- a/taxi-game-3d-client/Assets/_TaxiGame/Localization/Tables/Game String Table.csv
+++ b/taxi-game-3d-client/Assets/_TaxiGame/Localization/Tables/Game String Table.csv
@@ -170,7 +170,7 @@ car/gz24_red,,,GZ24(Red),GZ24(빨강)
 car/gz24_sand,,,GZ24(Sand),GZ24(샌드)
 car/gz24_white,,,GZ24(White),GZ24(흰색)
 car/gz24_yellow,,,GZ24(Yellow),GZ24(노랑)
-talk/1-1,,,Go to the place where you spend the most.,
+talk/1-1,,,Go to the place where you spend the most.,요즘 뜨는 핫플레이스로 가주세요.
 talk/1-2,,,Go to the nearby Hilton hotel.,근처 힐튼 호텔로 가주세요.
 talk/1-3,,,"Bro hurry up, I'm in a hurry.",서둘러 주세요. 급해요.
 talk/1-4,,,"Master, are you an old driver?","기사님, 운전 얼마나 하셨어요?"
